Updated styles for mobile

--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="main.js" type="application/javascript"></script>
@@ -29,9 +29,11 @@
             <div class="htitle">Finding The Car</div>
             <div class="hwrapper">
 
-                I posted a “want to buy” post in an mr2 facebook group, that got a few responses but nothing of my
+                I posted a &quot;want to buy&quot; post in an mr2 facebook group, that got a few responses but nothing
+                of my
                 liking. I
-                then got a comment stating that girls shouldn’t own this car because they would just ruin and crash the
+                then got a comment stating that girls shouldn&apos;t own this car because they would just ruin and crash
+                the
                 car.
                 I got scared and removed my post. A few weeks later I asked my friend ‘Seth’ to make the post instead.
                 He
