--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="main.js" type="application/javascript"></script>
@@ -45,7 +45,7 @@
         </figure>
 
         <figure class="gallery__item gallery__item--5">
-            <img src="img/home/index5.jpg" class="gallery__img" alt="Image 5">
+            <img src="img/home/index5.JPG" class="gallery__img" alt="Image 5">
         </figure>
 
         <figure class="gallery__item gallery__item--6">
@@ -64,10 +64,10 @@
             <img src="img/home/index9.jpg" class="gallery__img" alt="Image 9">
         </figure>
         <figure class="gallery__item gallery__item--10">
-            <img src="img/home/index10.jpg" class="gallery__img" alt="Image 10">
+            <img src="img/home/index10.JPG" class="gallery__img" alt="Image 10">
         </figure>
         <figure class="gallery__item gallery__item--11">
-            <img src="img/home/index11.jpg" class="gallery__img" alt="Image 11">
+            <img src="img/home/index11.JPG" class="gallery__img" alt="Image 11">
         </figure>
 
         <figure class="gallery__item gallery__item--12">
@@ -83,7 +83,7 @@
             <img src="img/home/index15.jpg" class="gallery__img" alt="Image 15">
         </figure>
         <figure class="gallery__item gallery__item--16">
-            <img src="img/home/index16.jpg" class="gallery__img" alt="Image 16">
+            <img src="img/home/index16.JPG" class="gallery__img" alt="Image 16">
         </figure>
     </div>
 </body>
