--- a/mods.html
+++ b/mods.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="main.js" type="application/javascript"></script>
@@ -37,60 +37,90 @@
     </div>
     <div class="line"> </div>
     <div class="size">
-        <img src="img/mods/mod2.jpg" alt="image2" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod1.jpg" alt="image1" class="image1" width="300px" height="300px">
-
-        <div class="title1">Head Unit</div>
-        <div class="wrapper1">
-            When i bought the car, it had a really old fashioned head unit, that i was unable to connect my phone to. I
-            bought a $600 kenwood double din headunit from supercheap auto and installed it.
+        <div class="row">
+            <div>
+                <div class="title1">Head Unit</div>
+                <div class="wrapper1">
+                    When i bought the car, it had a really old fashioned head unit, that i was unable to connect my
+                    phone
+                    to. I
+                    bought a $600 kenwood double din headunit from supercheap auto and installed it.
+                </div>
+            </div>
+            <img src="img/mods/mod2.jpg" alt="image2" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod1.jpg" alt="image1" class="image1" width="300px" height="300px">
         </div>
+
+
+
         <div class="line1"> </div>
-        <img src="img/mods/mod4.jpg" alt="image4" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod3.jpg" alt="image3" class="image1" width="300px" height="300px">
 
 
-        <div class="title2">Steering Wheel</div>
-        <div class="wrapper2">
-            I really like the design of my steering wheel so I'm not looking to buy an aftermarket removeable one,
-            atleast not for a while. The stock steering wheel had lots of wear and unevenness, so i sanded and filled
-            the wheel to make it smooth, then sewed a leather cover on.
+        <div class="row">
+            <div class="title2">Steering Wheel</div>
+            <div class="wrapper2">
+                I really like the design of my steering wheel so I'm not looking to buy an aftermarket removeable one,
+                atleast not for a while. The stock steering wheel had lots of wear and unevenness, so i sanded and
+                filled
+                the wheel to make it smooth, then sewed a leather cover on.
+            </div>
+            <img src="img/mods/mod4.jpg" alt="image4" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod3.jpg" alt="image3" class="image1" width="300px" height="300px">
+
         </div>
+
         <div class="line2"> </div>
-        <img src="img/mods/mod6.jpg" alt="image5" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod5.jpg" alt="image6" class="image1" width="300px" height="300px">
 
-        <div class="title2">Exhaust</div>
-        <div class="wrapper2">
-            I spent about 4 hours working on restoring my exhaust. I begun by removing it and found that there was a
-            small hole near my muffler, as well as rusty bolts holding it on. I wetsanded from 400 inccrementally up to
-            2000 grit and then polished with a random orbital machine.
+
+        <div class="row">
+            <div class="title2">Exhaust</div>
+            <div class="wrapper2">
+                I spent about 4 hours working on restoring my exhaust. I begun by removing it and found that there was a
+                small hole near my muffler, as well as rusty bolts holding it on. I wetsanded from 400 inccrementally up
+                to
+                2000 grit and then polished with a random orbital machine.
+            </div>
+
+            <img src="img/mods/mod6.jpg" alt="image5" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod5.jpg" alt="image6" class="image1" width="300px" height="300px">
+
+
+
         </div>
         <div class="line3"> </div>
 
-        <img src="img/mods/mod8.jpg" alt="image5" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod7.jpg" alt="image6" class="image1" width="300px" height="300px">
 
-        <div class="title2">Shifter and Shift Boot</div>
-        <div class="wrapper2">
-            When I first bought my car, the plastic surrounding the shifter was cracked, so I patched and resprayed it
-            (no image). The original shifter and boot was very worn and I wasn't the biggest fan. I bought a heavy
-            weight, "LikeWise" shifter, as well as sewed my own custom shift boot.
+        <div class="row">
+            <div class="title2">Shifter and Shift Boot</div>
+            <div class="wrapper2">
+                When I first bought my car, the plastic surrounding the shifter was cracked, so I patched and resprayed
+                it
+                (no image). The original shifter and boot was very worn and I wasn't the biggest fan. I bought a heavy
+                weight, "LikeWise" shifter, as well as sewed my own custom shift boot.
+            </div>
+            <img src="img/mods/mod8.jpg" alt="image5" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod7.jpg" alt="image6" class="image1" width="300px" height="300px">
+
         </div>
         <div class="line3"> </div>
 
-        <img src="img/mods/mod9.jpg" alt="image5" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod10.jpg" alt="image6" class="image1" width="300px" height="300px">
+
+        <div class="row">
+
+            <div class="title2">Wheels and Coilovers</div>
+            <div class="wrapper2">
+                The wheels that came with the car were 17inch Enkei Sc03, with very uevenly worn re003 tyres, gutter
+                rash
+                and bad fitment. I ordered custom SSR SP1R wheels from AutoTechnik, which took 6 months to arrive from
+                Japan. I had to install BC coilovers to fit the wheels due to their wider sizing. The car's fenders also
+                needed to be rolled so the wheels wouldnt rub as bad.
+            </div>
+            <img src="img/mods/mod9.jpg" alt="image5" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod10.jpg" alt="image6" class="image1" width="300px" height="300px">
 
 
-        <div class="title2">Wheels and Coilovers</div>
-        <div class="wrapper2">
-            The wheels that came with the car were 17inch Enkei Sc03, with very uevenly worn re003 tyres, gutter rash
-            and bad fitment. I ordered custom SSR SP1R wheels from AutoTechnik, which took 6 months to arrive from
-            Japan. I had to install BC coilovers to fit the wheels due to their wider sizing. The car's fenders also
-            needed to be rolled so the wheels wouldnt rub as bad.
+
         </div>
-
         <div class="line6"> </div>
 
 
