Updated styles for mobile

--- a/history.html
+++ b/history.html
@@ -35,7 +35,7 @@
                 then got a comment stating that girls shouldn&apos;t own this car because they would just ruin and crash
                 the
                 car.
-                I got scared and removed my post. A few weeks later I asked my friend ‘Seth’ to make the post instead.
+                I got scared and removed my post. A few weeks later I asked my friend &apos;Seth&apos; to make the post instead.
                 He
                 got similar replies.. including the one for my current car. The car was located in Newcastle which was
                 close
@@ -63,9 +63,9 @@
             <div class="hwrapper">
                 I drove up to Newcastle with my mum and dad on the 17th of January 2021, after my dad had been very
                 reluctant to be buying this car as it was just a Japanese shitbox. We metup with seth and then looked at
-                the car. My dad wasn’t the biggest fan but the car looked pretty good. The old man took my dad for a
+                the car. My dad wasn&apos;t the biggest fan but the car looked pretty good. The old man took my dad for a
                 drive and my dad was impressed. We then confirmed that I would be buying the car and gave a deposit. The
-                man also offered to give us a free transmission and engine…
+                man also offered to give us a free transmission and engine.
 
 
             </div>
@@ -96,7 +96,7 @@
                 and mum. It was a 45 degree day and super sunny. We picked up the car and the wife was very upset with
                 selling the car as we found out it was an anniversary present (oops). My dad drove the landcruiser with
                 the
-                engine in the trailer. My mum drove MR2 as I wasn’t confident driving manual 2 hours home and in the
+                engine in the trailer. My mum drove MR2 as I wasn&apos;t confident driving manual 2 hours home and in the
                 heat.
                 The aircon did not work but it was great fun.
 
@@ -134,10 +134,10 @@
             <div class="htitle">History </div>
             <div class="hwrapper">
                 A year later (February 2021) I was viewing MR2 facebook groups and decided to search the old owners name
-                to see if he had posted anything about the car. I found his comment stating “this tooksix months to
-                rebuild.” I read this and was shocked. He stated that 15 years old my car had been in the Newcastle
+                to see if he had posted anything about the car. I found his comment stating &quot;this took six months to
+                rebuild.&quot; I read this and was shocked. He stated that 15 years old my car had been in the Newcastle
                 floods. The car was then fully rebuilt and engine swapped. I always knew the car had been engine swapped
-                but never knew why and thought that maybe it blew up. My poor car….
+                but never knew why and thought that maybe it blew up. My poor car.
 
             </div>
 
