--- a/repairs.html
+++ b/repairs.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div>
-                    <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                    <section class="carousel" aria-label="Gallery" >
                         <ol class="carousel__viewport">
                             <li id="carousel__slide1" tabindex="0" class="carousel__slide">
                                 <img src="img/repairs/r_bumper1.jpg" />
@@ -95,7 +95,7 @@
                 </div>
 
                 <div>
-                    <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                    <section class="carousel" aria-label="Gallery" >
                         <ol class="carousel__viewport">
                             <li id="carousel2__slide1" tabindex="0" class="carousel__slide">
                                 <img src="img/repairs/r_bumper7.jpg" />
@@ -162,16 +162,16 @@
                         ordered
                         two
                         new
-                        wheel hubs and two more bearings as you had to ‘break’ the bearings to replace the hubs. This
+                        wheel hubs and two more bearings as you had to &apos;break&apos; the bearings to replace the hubs. This
                         fixed
                         the
                         issue and the wobbling wheel when I drove.
                     </div>
                 </div>
 
-                <img src="img/repairs/r_bearing3.jpg" alt="image4" class="image5" width="300px" height="300px">
+                <img src="img/repairs/r_bearing3.jpg" alt="image4" class="image5" >
 
-                <img src="img/repairs/r_bearing2.jpg" alt="image3" class="image6" width="300px" height="300px">
+                <img src="img/repairs/r_bearing2.jpg" alt="image3" class="image6" >
             </div>
         </div>
 
@@ -201,7 +201,7 @@
 
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel3__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_rust1.jpg" />
@@ -256,7 +256,7 @@
                     </div>
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel4__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_rust2.jpg" />
@@ -304,7 +304,7 @@
             </div>
 
         </div>
-            <div class="line10"></div>
+            <div class="line4"></div>
 
 
             <div class="section">
@@ -319,12 +319,12 @@
                             so I sanded down the metal diffuser/trim piece and resprayed black. Made the rear look
                             much better.
                             Also
-                            resprayed the wipers and then got fined by a HWP because he pulled me over…
+                            resprayed the wipers and then got fined by a HWP because he pulled me over.
                         </div>
                     </div>
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel5__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_rear3.jpg" />
@@ -358,7 +358,7 @@
                     </div>
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel6__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_rear1.jpg" />
@@ -404,7 +404,7 @@
                         <div class="title4">
                             Aircon February 2021</div>
                         <div class="wrapper3">
-                            The old owner stated that the car’s aircon only needed a re-gas to be fixed. So I got it
+                            The old owner stated that the car&apos;s aircon only needed a re-gas to be fixed. So I got it
                             re-gassed,
                             but
                             it stopped working almost straight away. I then replaced all of the seals for the aircon
@@ -430,7 +430,7 @@
                         <div class="title4">
                             Bumper pt 2 March 2022</div>
                         <div class="wrapper3">
-                            During the bad floods of early 2022, my car’s targa top continued to leak no matter what
+                            During the bad floods of early 2022, my car&apos;s targa top continued to leak no matter what
                             I did. I
                             decided to take it to my grandmas garage, but on the way in I hit a piece of wood that
                             was on the
@@ -446,7 +446,7 @@
 
 
 
-            <div class="line10"></div>
+            <div class="line8"></div>
             <div class="section">
                 <div class="row">
                     <div>
@@ -456,7 +456,7 @@
                             The paint on the car was very faded and swirled. Due to the fact that it is 30 year old
                             paint and
                             one
-                            stage paint (made w/o clear-coat), I couldn’t fully restore the paint to perfection.
+                            stage paint (made w/o clear-coat), I couldn&apos;t fully restore the paint to perfection.
                             Despite this I
                             clay
                             barred, compounded, polished and ceramic coated the entire car which took about 2 days
@@ -465,7 +465,7 @@
                     </div>
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel7__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_clean3.jpg" />
@@ -499,7 +499,7 @@
                     </div>
 
                     <div>
-                        <section class="carousel" aria-label="Gallery" style="width: 300px; height: 300px;">
+                        <section class="carousel" aria-label="Gallery" >
                             <ol class="carousel__viewport">
                                 <li id="carousel8__slide1" tabindex="0" class="carousel__slide">
                                     <img src="img/repairs/r_clean1.jpg" />
@@ -571,12 +571,12 @@
                         <div class="wrapper3">
                             I always hated that my engine bay grill was a very faded red, with peeling clear coat.
                             There was
-                            absolutely no way to take the layer apart as they are factory welded on n/a mr2’s. So I
+                            absolutely no way to take the layer apart as they are factory welded on n/a mr2&apos;s. So I
                             taped off
                             every
-                            single grill piece and used a tiny paint gun to spray inside. It isn’t the most perfect
+                            single grill piece and used a tiny paint gun to spray inside. It isn&apos;t the most perfect
                             finish as I
-                            couldn’t sand the inside or polish it afterwards. Stills looks better than previously
+                            couldn&apos;t sand the inside or polish it afterwards. Stills looks better than previously
                         </div>
                     </div>
 
@@ -596,7 +596,7 @@
                             When I was replacing the wheel bearings, I noticed my handbrake cable was completely
                             snapped. I
                             always
-                            wondered why my handbrake never worked … So I bought a new cable for it and replaced it.
+                            wondered why my handbrake never worked. So I bought a new cable for it and replaced it.
                         </div>
                     </div>
 
@@ -614,7 +614,7 @@
                         <div class="title4">
                             Wheel Studs June 2021</div>
                         <div class="wrapper3">
-                            I always noticed that my wheel studs were a bit rusty, but I wasn’t too worried as my
+                            I always noticed that my wheel studs were a bit rusty, but I wasn&apos;t too worried as my
                             wheel nuts
                             were
                             open holed. Then one day I was taking my wheel off and one snapped. I decided I would
