removed heigt&width from style in repairs

--- a/repairs.html
+++ b/repairs.html
@@ -36,9 +36,9 @@
                         onto the car. This is because the previous owner hit something and cracked it. My dad taught me
                         how
                         to
-                        fibreglass and then we resprayed the underneath as well as it was scratched and ripped. We then
+                        fibreglass and then we resprayed it, including the underneath. We then
                         fixed
-                        the fitment and it was perfect. The next night I scratched the underneath
+                        the fitment and it was perfect. The next night I scratched it. 
                     </div>
                 </div>
 
@@ -158,14 +158,14 @@
                     <div class="wrapper3">
                         After 7 months of driving the car I begin to hear a noise from the rear wheels when I drove. I
                         first
-                        replaced the wheel bearings in both rear suspension, which did not fix the issue. Later on I
+                        replaced the wheel bearings in both the rear suspension, which did not fix the issue. Later on I
                         ordered
                         two
                         new
                         wheel hubs and two more bearings as you had to &apos;break&apos; the bearings to replace the hubs. This
                         fixed
                         the
-                        issue and the wobbling wheel when I drove.
+                        issue.
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                         This was mostly surface rust, so I got rid of all of it, sprayed rust preventer, undercoat
                         and used
                         and
-                        aircompressor to respray the red. The colour match to the fender is perfect. I did not do
+                        aircompressor to respray the red, with the help of my dad. The colour match to the fender is perfect. I did not do
                         the entire
                         frunk
                         because effort.
@@ -409,16 +409,16 @@
                             but
                             it stopped working almost straight away. I then replaced all of the seals for the aircon
                             connections
-                            that span from the front to the rear of the car. It stilled leaked after another regas.
+                            that span from the front to the rear of the car. It stilled leaked after another re-gas.
                             I then got
                             my
                             aircon compressor refurbished and the aircon was fixed
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_aircon2.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_aircon2.jpg" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_aircon1.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_aircon1.jpg" alt="image3" class="image6" >
                 </div>
             </div>
 
@@ -438,9 +438,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_bumper3.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_bumper3.jpg" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_bumper4.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_bumper4.jpg" alt="image3" class="image6">
                 </div>
             </div>
 
@@ -555,9 +555,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_engine1.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_engine1.jpg" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_engine2.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_engine2.jpg" alt="image3" class="image6" >
                 </div>
             </div>
 
@@ -580,9 +580,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_enginebay2.JPG" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_enginebay2.JPG" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_enginebay1.JPG" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_enginebay1.JPG" alt="image3" class="image6" >
                 </div>
             </div>
             <div class="line8"></div>
@@ -625,9 +625,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_stud1.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_stud1.jpg" alt="image4" class="image5">
 
-                    <img src="img/repairs/r_stud2.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_stud2.jpg" alt="image3" class="image6">
                 </div>
             </div>
 
@@ -646,9 +646,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_strut1.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_strut1.jpg" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_strut2.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_strut2.jpg" alt="image3" class="image6" >
                 </div>
             </div>
 
@@ -666,9 +666,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_wheel2.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_wheel2.jpg" alt="image4" class="image5" >
 
-                    <img src="img/repairs/r_wheel1.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_wheel1.jpg" alt="image3" class="image6" >
                 </div>
             </div>
 
@@ -690,9 +690,9 @@
                         </div>
                     </div>
 
-                    <img src="img/repairs/r_window1.jpg" alt="image4" class="image5" width="300px" height="300px">
+                    <img src="img/repairs/r_window1.jpg" alt="image4" class="image5">
 
-                    <img src="img/repairs/r_window2.jpg" alt="image3" class="image6" width="300px" height="300px">
+                    <img src="img/repairs/r_window2.jpg" alt="image3" class="image6">
                 </div>
             </div>
 
