--- a/repairs.html
+++ b/repairs.html
@@ -175,14 +175,14 @@
             </div>
         </div>
 
-        <div class="line10"></div>
+        <div class="line8"></div>
 
         <div class="section">
             <div class="row">
                 <div>
                     <div class="title3">
                         Rust January 2022</div>
-                    <div class="wrapper3">
+                    <div class="wrapper4">
                         While I had covid, I wanted to work on MR2. So I found the only point of (visible) rust on
                         the car
                         and
@@ -395,7 +395,7 @@
                     </section>
                 </div>
             </div>
-
+            </div>
             <div class="line4"></div>
 
             <div class="section">
