phone layout mostly complete

--- a/history.html
+++ b/history.html
@@ -55,11 +55,11 @@
 
 
         </div>
-        <div class="line8"></div>
+        <div class="line12"></div>
 
 
         <div class="modheading">
-            <div class="htitle">Seeing the car</div>
+            <div class="htitle1">Seeing the car</div>
             <div class="hwrapper">
                 I drove up to Newcastle with my mum and dad on the 17th of January 2021, after my dad had been very
                 reluctant to be buying this car as it was just a Japanese shitbox. We metup with seth and then looked at
@@ -81,7 +81,7 @@
 
         </div>
 
-        <div class="line8"></div>
+        <div class="line12"></div>
 
 
 
@@ -89,7 +89,7 @@
 
 
         <div class="modheading">
-            <div class="htitle">The first day </div>
+            <div class="htitle1">The first day </div>
             <div class="hwrapper">
                 On the 24th of January, we hired a trailer and drove the 100 series landcruiser up to Newcastle w/ my
                 dad
@@ -123,7 +123,7 @@
 
         </div>
 
-        <div class="line8"></div>
+        <div class="line12"></div>
 
 
 
@@ -131,7 +131,7 @@
 
 
         <div class="modheading">
-            <div class="htitle">History </div>
+            <div class="htitle1">History </div>
             <div class="hwrapper">
                 A year later (February 2021) I was viewing MR2 facebook groups and decided to search the old owners name
                 to see if he had posted anything about the car. I found his comment stating &quot;this took six months to
