--- a/mods.html
+++ b/mods.html
@@ -58,82 +58,89 @@
 
 
         <div class="row">
-        <div>
-        <div class="title2">Steering Wheel</div>
-        <div class="wrapper2">
-            I really like the design of my steering wheel so I'm not looking to buy an aftermarket removeable one,
-            atleast not for a while. The stock steering wheel had lots of wear and unevenness, so i sanded and
-            filled
-            the wheel to make it smooth, then sewed a leather cover on, with the help of my dad.
-        </div>
-    </div>
-    <img src="img/mods/mod3.jpg" alt="image3" class="image1" width="300px" height="300px">
-    <img src="img/mods/mod4.jpg" alt="image4" class="image2" width="300px" height="300px">
+            <div>
+                <div class="title2">Steering Wheel</div>
+                <div class="wrapper2">
+                    I really like the design of my steering wheel so I'm not looking to buy an aftermarket removeable
+                    one,
+                    atleast not for a while. The stock steering wheel had lots of wear and unevenness, so i sanded and
+                    filled
+                    the wheel to make it smooth, then sewed a leather cover on, with the help of my dad.
+                </div>
+            </div>
+            <img src="img/mods/mod3.jpg" alt="image3" class="image1" width="300px" height="300px">
+            <img src="img/mods/mod4.jpg" alt="image4" class="image2" width="300px" height="300px">
 
 
-    </div>
-
-    <div class="line1"> </div>
-
-
-    <div class="row">
-        <div>
-        <div class="title2">Exhaust</div>
-        <div class="wrapper2">
-            I spent about 4 hours working on restoring my exhaust. I begun by removing it and found that there was a
-            small hole near my muffler, as well as rusty bolts holding it on. I wetsanded from 400 incrementally up
-            to
-            2000 grit and then polished with a random orbital machine.
         </div>
 
+        <div class="line1"> </div>
+
+
+        <div class="row">
+            <div>
+                <div class="title2">Exhaust</div>
+                <div class="wrapper2">
+                    I spent about 4 hours working on restoring my exhaust. I begun by removing it and found that there
+                    was a
+                    small hole near my muffler, as well as rusty bolts holding it on. I wetsanded from 400 incrementally
+                    up
+                    to
+                    2000 grit and then polished with a random orbital machine.
+                </div>
+
+            </div>
+            <img src="img/mods/mod5.jpg" alt="image6" class="image1" width="300px" height="300px">
+            <img src="img/mods/mod6.jpg" alt="image5" class="image2" width="300px" height="300px">
+
+
+
+
         </div>
-        <img src="img/mods/mod5.jpg" alt="image6" class="image1" width="300px" height="300px">
-        <img src="img/mods/mod6.jpg" alt="image5" class="image2" width="300px" height="300px">
+        <div class="line1"> </div>
 
 
+        <div class="row">
+            <div>
+                <div class="title2">Shifter and Shift Boot</div>
+                <div class="wrapper2">
+                    When I first bought my car, the plastic surrounding the shifter was cracked, so I patched and
+                    resprayed
+                    it
+                    (no image). The original shifter and boot was very worn and I wasn't the biggest fan. I bought a
+                    heavy
+                    weighted, "LikeWise" shifter, as well as sewed my own custom shift boot.
+                </div>
+            </div>
+            <img src="img/mods/mod7.jpg" alt="image6" class="image1" width="300px" height="300px">
+            <img src="img/mods/mod8.jpg" alt="image5" class="image2" width="300px" height="300px">
 
 
-    </div>
-    <div class="line1"> </div>
-
-
-    <div class="row">
-        <div>
-        <div class="title2">Shifter and Shift Boot</div>
-        <div class="wrapper2">
-            When I first bought my car, the plastic surrounding the shifter was cracked, so I patched and resprayed
-            it
-            (no image). The original shifter and boot was very worn and I wasn't the biggest fan. I bought a heavy
-            weighted, "LikeWise" shifter, as well as sewed my own custom shift boot.
         </div>
-    </div>
-        <img src="img/mods/mod7.jpg" alt="image6" class="image1" width="300px" height="300px">
-        <img src="img/mods/mod8.jpg" alt="image5" class="image2" width="300px" height="300px">
+        <div class="line1"> </div>
 
 
-    </div>
-    <div class="line1"> </div>
+        <div class="row">
+            <div>
+
+                <div class="title2">Wheels and Coilovers</div>
+                <div class="wrapper2">
+                    The wheels that came with the car were 17inch Enkei Sc03, with very unevenly worn re003 tyres,
+                    gutter
+                    rashed
+                    and bad fitment. I ordered custom SSR SP1R wheels from AutoTechnik, that took 6 months to arrive
+                    from
+                    Japan. I had to install BC coilovers to fit the wheels. The car's fenders also
+                    were rolled so the wheels wouldn't rub as bad.
+                </div>
+            </div>
+            <img src="img/mods/mod9.jpg" alt="image5" class="image2" width="300px" height="300px">
+            <img src="img/mods/mod10.jpg" alt="image6" class="image1" width="300px" height="300px">
 
 
-    <div class="row">
-        <div>
 
-        <div class="title2">Wheels and Coilovers</div>
-        <div class="wrapper2">
-            The wheels that came with the car were 17inch Enkei Sc03, with very unevenly worn re003 tyres, gutter
-            rashed
-            and bad fitment. I ordered custom SSR SP1R wheels from AutoTechnik, that took 6 months to arrive from
-            Japan. I had to install BC coilovers to fit the wheels. The car's fenders also
-            were rolled so the wheels wouldn't rub as bad.
         </div>
-    </div>
-        <img src="img/mods/mod9.jpg" alt="image5" class="image2" width="300px" height="300px">
-        <img src="img/mods/mod10.jpg" alt="image6" class="image1" width="300px" height="300px">
-
-
-
-    </div>
-    <div class="line1"> </div>
+        <div class="line1"> </div>
 
 
     </div>
